namespace.yaml
# namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: move-app
  labels:
    name: move-app
